--- a/thelittlemermaid/thelittlemermaid.css
+++ b/thelittlemermaid/thelittlemermaid.css
@@ -1,22 +1,36 @@
+body{
+  background-image:url('../Images/the_little_mermaid_background.PNG');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
 
-    #bg_img {
+    /* #bg_img {
         /* Set rules to fill background */
-        min-height: 100%;
-        min-width: 1024px;
+        /* min-height: 100%; */
+        /* min-width: 1024px; */
           
         /* Set up proportionate scaling */
-        width: 100%;
-        height: auto;
+        /* width: 100%; */
+        /* height: auto; */
           
         /* Set up positioning */
-        position: fixed;
-        top: 0;
-        left: 0;
-      }
+        /* position: fixed; */
+        /* top: 0; */
+        /* left: 0; */
+      /* } */
       
-      @media screen and (max-width: 1024px) { /* Specific to this particular image */
-        img.bg {
-          left: 50%;
-          margin-left: -512px;   /* 50% */
-        }
-      }
+      /* @media screen and (max-width: 1024px) { Specific to this particular image */
+        /* img.bg { */
+          /* left: 50%; */
+          /* margin-left: -512px;   50% */
+        /* } */
+      /* } */ 
+
+#friend1{
+  height: 200px;
+  width: 200px;
+  position: absolute;
+  top: 800px;
+  right: 800px;
+}
