--- a/thelittlemermaid/thelittlemermaid.css
+++ b/thelittlemermaid/thelittlemermaid.css
@@ -34,3 +34,19 @@ body{
   top: 800px;
   right: 800px;
 }
+
+#friend2{
+  height: 200px;
+  width: 200px;
+  position: absolute;
+  top: 400px;
+  right: 1100px;
+}
+
+#ariel{
+  height: 700px;
+  width: 500px;
+  position: fixed;
+  bottom: 0;
+  right: -1;
+}
