--- a/thelittlemermaid/thelittlemermaid.css
+++ b/thelittlemermaid/thelittlemermaid.css
@@ -52,3 +52,21 @@ body{
   bottom: 0;
   right: -1;
 }
+
+#ursula{
+  position: absolute;
+  top: 423px;
+  right: 0px;
+}
+
+#legs1{ 
+   position: absolute; 
+   top: 200px; 
+   right: 200px; 
+ }
+
+ #legs2{ 
+  position: absolute; 
+  top: 200px; 
+  right: 350px; 
+}
