--- a/the_lion_king/lion_king.css
+++ b/the_lion_king/lion_king.css
@@ -51,3 +51,9 @@ body {
   right: 10px;
   }
 
+#button{
+  background-color: #080307;
+  padding: 35px 16px;
+  margin: 262px 657px;
+  width: 11%;
+}
